--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 body {
     font-family: Tahoma;
     color: #000000;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .tabs {
@@ -15,24 +15,38 @@ body {
     border: 1px solid #C0C0C0;
 	display: inline-block;
     cursor: pointer;
-    margin-bottom: -1px;
+    margin-bottom:-1px;
     font-size: 14px;
     color: #000000;
     background:#F5F5F5;
     padding: 5px;
     width: 120px;
-    margin: 5px;
+    margin:5px;
 }
 
 .tab:hover {
     background: #A9A9A9;
 }
 
-.form {
+form {
     display: inline-block;
-    margin-left: 300px;
 }
-
+input {
+	float: right;
+	margin-right: 30px;
+	vertical-align: center;
+	margin-bottom: 10px;
+	border-radius: 15px;
+}
+input:before{
+	content: url(lupa.png);
+	padding: 0px;
+    margin: 5px 0;
+}
+.pollution {
+	margin-top: 10px;
+	margin-bottom: -15px;
+	}
 .pollution_search {
     font-size: 12px;
     background-color: #F5F5F5;
@@ -64,7 +78,7 @@ body {
     justify-content: space-around;
 }
 
-#footer {
+footer {
     background: #DCDCDC;
     border: 1px solid #C0C0C0;
     color: #000000;
