--- a/history_css.css
+++ b/history_css.css
@@ -8,28 +8,40 @@ body {
     background: #DCDCDC;
     border: 1px solid #C0C0C0;
     width: 100%;
+    box-sizing: content-box;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 25px;
 }
 
 .tab {
     cursor: pointer;
     border: 1px solid #C0C0C0;
     display: inline-block;
-    cursor: pointer;
-    margin-bottom: -1px;
-    font-size: 14px;
     color: #000000;
     background:#F5F5F5;
-    padding: 10px;
-    width: 120px;
-    margin: 10px;
+    font-size: 16px;
+    height: 30px;
+    box-sizing: border-box;
+    text-align: center; 
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 20px;
 }
 
 .tab:hover {
     background: #A9A9A9;
 }
 header {
-    background-color: hsla(0, 100%, 90%, 0.3);
+    background-color: #F5F5F5;
     height:60px;
+    border: 1px solid #C0C0C0;
+}
+main {
+	padding-bottom: 30px;
+}
+.text {
+	vertical-align: middle;
 }
 form {
     float: right;
@@ -37,7 +49,11 @@ form {
     margin-right: 5px;
 }
 input{
-     height: 30px;
+     float: right;
+	margin-right: 30px;
+	vertical-align: center;
+	margin-bottom: 10px;
+	border-radius: 15px;
 }
 footer {
     background: #DCDCDC;
@@ -53,9 +69,6 @@ footer {
     }
     td{
         padding: 10px;
-    }
-    table {
-        margin-left: 500px;
     }
     td:nth-child(even){
         background-color: lightgray;
