--- a/history_css.css
+++ b/history_css.css
@@ -1,6 +1,7 @@
 body {
     font-family: Tahoma;
     color: #000000;
+    margin:0;
 }
 
 .tabs {
@@ -37,10 +38,12 @@ header {
     border: 1px solid #C0C0C0;
 }
 main {
-	padding-bottom: 30px;
+    padding-bottom: 30px;
 }
 .text {
-	vertical-align: middle;
+    margin-top: 20px;
+    margin-bottom: -17px;
+    margin-left: 20px;
 }
 form {
     float: right;
@@ -49,10 +52,10 @@ form {
 }
 input{
      float: right;
-	margin-right: 30px;
-	vertical-align: center;
-	margin-bottom: 10px;
-	border-radius: 15px;
+    margin-right: 30px;
+    vertical-align: center;
+    margin-bottom: 10px;
+    border-radius: 15px;
 }
 footer {
     background: #DCDCDC;
@@ -74,4 +77,7 @@ footer {
     }
     tr:nth-child(odd){
         background-color: lightgray;
+    }
+    table {
+        margin:0 auto;
     }
