--- a/css.css
+++ b/css.css
@@ -39,16 +39,18 @@ header {
     font-size: 12px;
     width: 100%;
 }
-form {
-    display: inline-block;
+.input {
+	position: relative;
 }
 input {
-	float: right;
 	margin-right: 30px;
-	vertical-align: center;
-	margin-bottom: 10px;
-	border-radius: 15px;
-	position: relative;
+    margin-top: 20px;
+    border-radius: 15px;
+    color: gray;
+    background-color: lightgray;
+	position: absolute;
+	right: 0;
+	margin-top: 5px;
 }
 .input:before{
 	content: url(lupa.pn);
