--- a/css5.css
+++ b/css5.css
@@ -33,7 +33,7 @@ body {
 .tab:hover {
     background: #A9A9A9;
 }
-header {
+.header {
     background-color: #F5F5F5;
     height:60px;
     border: 1px solid #C0C0C0;
@@ -119,7 +119,7 @@ input {
     height: 20px;
     margin:0 auto;
 }
-footer {
+.footer {
     background: #DCDCDC;
     border: 1px solid #C0C0C0;
     color: #000000;
@@ -131,11 +131,10 @@ footer {
     height: 10px;
 }
 .foo{
-    height: 20px;
     box-sizing: content-box;
-    margin-left: 500px;
     display: flex;
-    margin-top: 30px;
+    margin-top: 80px;
+    margin-left: 500px;
 }
 .Moon {
     margin-left: 200px;
