--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Tahoma;
+    font-family: Tahoma,sans-serif;
     color: #000000;
     margin:0;
     overflow-x: hidden;
@@ -44,24 +44,16 @@ body {
 }
 input {
 	margin-right: 30px;
-    margin-top: 20px;
     border-radius: 15px;
     color: gray;
     background-color: lightgray;
-	margin-top: -2px;
-	position: relative;
-	float: right;
-}
-.input:before{
-	content: url(lupa.png);
-	padding: 5px;
-    margin: 5px 0;
-    height: 10px;
-    width: 10px;
 	position: absolute;
-	bottom: 0px;
-	right: 0px;
-
+	right: 0;
+    background-image: url("pics/magnifier.png");
+    background-repeat:no-repeat;
+    background-size:15px;
+    background-position:10px;
+    font-size:15px;
 }
 .pollution {
 	margin-top: 20px;
@@ -85,13 +77,51 @@ input {
     width: 500px;
     display: inline-block;
 }
-
-
-#forecast_container {
+img {
+    width: 100px;
+    height: 100px;
+}
+.today_info {
+    display: flex;
+    justify-content: space-evenly;
+}
+.weather_row {
     display: flex;
     justify-content: space-around;
 }
-
+.week_day_info {
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.week_day_info:hover {
+    border: 1px solid lightgrey;
+}
+.temp {
+    flex-grow: 1;
+}
+.particles:hover {
+    color: lightpink;
+}
+.graph_container {
+    width: 100%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+.graphic {
+    width: 90%;
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+.graph_block {
+    width: 20px;
+    height: 30px;
+    background: grey;
+    display: flex;
+    align-self: flex-end;
+}
 .footer {
     background: #DCDCDC;
     border: 1px solid #C0C0C0;
@@ -104,53 +134,27 @@ input {
     bottom: 0;
     height: 10px;
 }
-.graph {
-    border-bottom:solid 1px #000000;
-    display: flex;
-    align-items: flex-end;
-    margin: 30px;
+@media screen and (max-width:767px){
+    .weather_row {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .week_day_info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .particles {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }
 }
 
-.graph_container {
-    margin-top: 90px;
-    margin-bottom: 20px;
-}
+@media screen and (max-width:767px){
+    .particles:hover {
+        color: dodgerblue;
+    }
 
-.item2 {
-    background-color: yellow;
-    height: 50px;
-    width: 10px;
-    margin-left: 230px;
-    display: block;
 }
-div.item1:first-child{
-    margin-left: 50px;
-}
-.item1 {
-    height: 50px;
-    width: 10px;
-    margin-left: 225px;
-    background-color: pink;
-    display: block;
-}
-.item3 {
-    background-color: blueviolet;
-    height: 20px;
-    width: 10px;
-    margin-left: 230px;
-    display:block;
-}
-.item4 {
-    margin-left: 230px;
-    background-color: lightgreen;
-    height: 30px;
-    width: 10px;
-    display: block;
-}
-.img {
-    height: 50px;
-    width: 60px;
-}
-.item1:first-child{
-    margin-left: 110px;
-} 
