--- a/css.css
+++ b/css.css
@@ -78,8 +78,8 @@ input {
     display: inline-block;
 }
 img {
-    width: 100px;
-    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
 }
 .today_info {
     display: flex;
@@ -88,6 +88,7 @@ img {
 .weather_row {
     display: flex;
     justify-content: space-around;
+    max-width: 100%;
 }
 .week_day_info {
     text-align: center;
@@ -132,6 +133,8 @@ img {
     left: 0;
     bottom: 0;
     height: 10px;
+    position: fixed;
+    width: 100%;
 }
 .copyright {
     text-align: center;
