--- a/css.css
+++ b/css.css
@@ -161,5 +161,11 @@ img {
     .particles:hover {
         color: dodgerblue;
     }
-
+    footer {
+        position: relative;
+    }
+    .footer {
+        position: page;
+        margin-top: 0;
+    }
 }
