--- a/css.css
+++ b/css.css
@@ -48,20 +48,23 @@ input {
     color: gray;
     background-color: lightgray;
 	position: absolute;
-	right: 0;
+    right: 0;
     background-image: url("pics/magnifier.png");
     background-repeat:no-repeat;
     background-size:15px;
     background-position:10px;
     font-size:15px;
+    margin-top: 20px;
 }
 .pollution {
-	margin-top: 20px;
-	margin-bottom: -15px;
 	padding-left: 5px;
 	color: grey;
+	display: flex;
 }
-
+.pollution_search {
+	display: flex;
+	justify-content: space-between;
+}
 .container {
     width: 100%;
     display: inline-block;
@@ -127,13 +130,12 @@ img {
     background: #DCDCDC;
     border: 1px solid #C0C0C0;
     color: #000000;
-    margin-top: 360px;
+    margin-top: 200px;
     font-size: 12px;
     padding: 10px;
     left: 0;
     bottom: 0;
     height: 10px;
-    position: fixed;
     width: 100%;
 }
 .copyright {
@@ -165,7 +167,23 @@ img {
         position: relative;
     }
     .footer {
-        position: page;
         margin-top: 0;
     }
+    .pollution {
+    	width: auto;
+    	display: flex;
+    }
+    .input {
+    	width: 100%;
+    }
+} 
+@media screen and (max-width: 558px){
+	input {
+		position: static;
+		width: 100%;
+	}
+	.input {
+		position: static;
+		
+	}
 }
