--- a/css.css
+++ b/css.css
@@ -187,3 +187,144 @@ img {
 		
 	}
 }
+.rainfall-expectancy {
+    display: none;
+    flex-wrap: wrap;
+    color: #5DD9C1;
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.rainfall-percentage-and-time {
+    display: flex;
+    flex-grow: 1;
+    min-width: 320px;
+    flex-flow: column;
+}
+
+.rainfall-percentage {
+    display: flex;
+}
+
+.rainfall-percentage__rainfall-level {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.rainfall-level-15 {
+    height: 15px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-30 {
+    height: 30px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-10 {
+    height: 10px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-11 {
+    height: 11px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-9 {
+    height: 9px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-8 {
+    height: 8px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-44 {
+    height: 44px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-38 {
+    height: 38px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-37 {
+    height: 37px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-23 {
+    height: 23px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-6 {
+    height: 6px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+
+.rainfall-level-0 {
+    height: 0px;
+    border-top: 3px solid blue;
+    background-color: dodgerblue;
+}
+.wind-and-time {
+    display: none;
+    color: lightblue;
+    text-align: center;
+    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 50px;
+    max-width: 100%;
+}
+
+.value-arrow-hour {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.value-and-arrows {
+    display: flex;
+    justify-content: space-around;
+}
+
+.value-and-arrows__wind-speed {
+    height: 70px;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.wind-320-degrees {
+    transform: rotate(320deg);
+}
+
+.wind-350-degrees {
+    transform: rotate(350deg);
+}
+
+.wind-20-degrees {
+    transform: rotate(20deg);
+}
+.active {
+    display: flex;
+}
