--- a/template/html.html
+++ b/template/html.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Прогноз погоды</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="styles/css.css">
 </head>
 
 <body>
@@ -47,9 +47,9 @@
            </div>
 
         <div>
-            <button class="temperature">Температура</button>
-            <button class="rainfall">Вероятность осадков</button>
-            <button class="wind">Ветер</button>
+            <button class="temperature" id='temperature'>Температура</button>
+            <button class="rainfall" id='rainfall'>Вероятность осадков</button>
+            <button class="wind" id='wind'>Ветер</button>
         </div>
     </div>
 </div>
@@ -170,42 +170,42 @@
         <div class='weather_row'>
             <div class='week_day_info'>
                 <div class='particles'>ср</div>
-                <div class='particles'><img src="thunder.png"></div>
+                <div class='particles'><img src="pics/thunder.png"></div>
                 <div class='particles'>28° 14°</div>
             </div>
             <div class='week_day_info'>
                 <div class='particles'>чт</div>
-                <div class='particles'><img src="sunny.png"></div>
+                <div class='particles'><img src="pics/sunny.png"></div>
                 <div class='particles'>22° 13°</div>
             </div>
             <div class='week_day_info'>
                 <div class='particles'>пт</div>
-                <div class='particles'><img src="sunny.png"></div>
+                <div class='particles'><img src="pics/sunny.png"></div>
                 <div class='particles'>21° 11°</div>
             </div>
             <div class='week_day_info'>
                 <div class='particles'>сб</div>
-                <div class='particles'><img src="partly_cloudy.png"></div>
+                <div class='particles'><img src="pics/partly_cloudy.png"></div>
                 <div class='particles'>24° 12°</div>
             </div>
             <div class='week_day_info'>
                 <div class='particles'>вс</div>
-                <div class='particles'><img src="Rainy_Day.png"></div>
+                <div class='particles'><img src="pics/Rainy_Day.png"></div>
                 <div class='particles'>26° 13°</div>
             </div>
             <div class='week_day_info'>
                 <div class='particles'>пн</div>
-                <div class='particles'><img src="Rainy_Day.png"></div>
+                <div class='particles'><img src="pics/Rainy_Day.png"></div>
                 <div class='particles'>28° 14°</div>
             </div>
             <div class='week_day_info'>
                 <div class='particles'>вт</div>
-                <div class='particles'><img src="partly_cloudy.png"></div>
+                <div class='particles'><img src="pics/partly_cloudy.png"></div>
                 <div class='particles'>28° 14°</div>
             </div>
             <div class='week_day_info'>
                 <div class='particles'>ср</div>
-                <div class='particles'><img src="partly_cloudy.png"></div>
+                <div class='particles'><img src="pics/partly_cloudy.png"></div>
                 <div class='particles'>28° 14°</div>
             </div>
         </div>        </main>
