--- a/template/html5.html
+++ b/template/html5.html
@@ -5,7 +5,7 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
     <title>Прогноз погоды на 5 дней</title>
-    <link rel="stylesheet" href="css5.css">
+    <link rel="stylesheet" href="styles/css5.css">
 </head>
 
 <body>
@@ -236,32 +236,32 @@
 				<div class="precipitation_info">
 					<div class="precipitation_info_block">0</div>
 					<div class="precipitation_info_block">0</div>
-					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
-					<div class="precipitation_info_block">4.6<img src="Group_2.png"></div>
+					<div class="precipitation_info_block">2.2<img src="pics/Group.png"></div>
+					<div class="precipitation_info_block">4.6<img src="pics/Group_2.png"></div>
 				</div>
 				<div class="precipitation_info">
 					<div class="precipitation_info_block">0</div>
 					<div class="precipitation_info_block">0</div>
-					<div class="precipitation_info_block">4.5<img src="Group_2.png"></div>
-					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
+					<div class="precipitation_info_block">4.5<img src="pics/Group_2.png"></div>
+					<div class="precipitation_info_block">2.2<img src="pics/Group.png"></div>
 				</div>
 				<div class="precipitation_info">
 					<div class="precipitation_info_block">0</div>
 					<div class="precipitation_info_block">4.7</div>
-					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
-					<div class="precipitation_info_block">0<img src="Group_2.png"></div>
+					<div class="precipitation_info_block">2.2<img src="pics/Group.png"></div>
+					<div class="precipitation_info_block">0<img src="pics/Group_2.png"></div>
 				</div>
 				<div class="precipitation_info">
 					<div class="precipitation_info_block">0</div>
 					<div class="precipitation_info_block">0</div>
-					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
-					<div class="precipitation_info_block">4.6<img src="Group_2.png"></div>
+					<div class="precipitation_info_block">2.2<img src="pics/Group.png"></div>
+					<div class="precipitation_info_block">4.6<img src="pics/Group_2.png"></div>
 				</div>
 				<div class="precipitation_info">
 					<div class="precipitation_info_block">0</div>
 					<div class="precipitation_info_block">0</div>
-					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
-					<div class="precipitation_info_block">4.6<img src="Group_2.png"></div>
+					<div class="precipitation_info_block">2.2<img src="pics/Group.png"></div>
+					<div class="precipitation_info_block">4.6<img src="pics/Group_2.png"></div>
 				</div>
 			</div>
 		</div>
